<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="select_city">Выберите город: </string>
    <string name="city">Город</string>
    <string name="currency">Валюта</string>
    <string name="pass">Сдать</string>
    <string name="buy">Купить</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="rub">RUB</string>
    <string name="usd_pass">3.123</string>
    <string name="usd_buy">3.323</string>
    <string name="eur_pass">3.123</string>
    <string name="eur_buy">3.323</string>
    <string name="rub_pass">3.123</string>
    <string name="rub_buy">3.323</string>
    <string name="street">ул. Лейтенанта Рябцева</string>
    <string name="error">Ошибка связи</string>
</resources>