<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_item"
    android:padding="20dp">


    <TextView
        android:id="@+id/text_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/street"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/currency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_street" />

    <TextView
        android:id="@+id/text_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/pass"
        app:layout_constraintEnd_toStartOf="@id/text_buy"
        app:layout_constraintStart_toEndOf="@id/text_currency"
        app:layout_constraintTop_toBottomOf="@id/text_street" />


    <TextView
        android:id="@+id/text_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/buy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_street" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_usd"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/usd"
        app:layout_constraintStart_toStartOf="@id/text_currency"
        app:layout_constraintTop_toBottomOf="@id/text_currency"
        app:shapeAppearance="@style/circleImageView" />

    <TextView
        android:id="@+id/text_usd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/usd"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_usd"
        app:layout_constraintStart_toEndOf="@id/image_usd"
        app:layout_constraintTop_toTopOf="@id/image_usd" />

    <TextView
        android:id="@+id/usd_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usd_pass"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_usd"
        app:layout_constraintStart_toStartOf="@id/text_pass"
        app:layout_constraintTop_toTopOf="@id/image_usd" />

    <TextView
        android:id="@+id/usd_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usd_buy"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_usd"
        app:layout_constraintStart_toStartOf="@id/text_buy"
        app:layout_constraintTop_toTopOf="@id/image_usd" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_eur"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/eur"
        app:layout_constraintStart_toStartOf="@id/text_currency"
        app:layout_constraintTop_toBottomOf="@id/image_usd"
        app:shapeAppearance="@style/circleImageView" />

    <TextView
        android:id="@+id/eur_usd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/eur"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_eur"
        app:layout_constraintStart_toEndOf="@id/image_eur"
        app:layout_constraintTop_toTopOf="@id/image_eur" />

    <TextView
        android:id="@+id/eur_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eur_pass"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_eur"
        app:layout_constraintStart_toStartOf="@id/text_pass"
        app:layout_constraintTop_toTopOf="@id/image_eur" />

    <TextView
        android:id="@+id/eur_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eur_buy"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_eur"
        app:layout_constraintStart_toStartOf="@id/text_buy"
        app:layout_constraintTop_toTopOf="@id/image_eur" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_rub"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/rub"
        app:layout_constraintStart_toStartOf="@id/text_currency"
        app:layout_constraintTop_toBottomOf="@id/image_eur"
        app:shapeAppearance="@style/circleImageView" />

    <TextView
        android:id="@+id/rub_usd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/rub"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_rub"
        app:layout_constraintStart_toEndOf="@id/image_rub"
        app:layout_constraintTop_toTopOf="@id/image_rub" />

    <TextView
        android:id="@+id/rub_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rub_pass"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_rub"
        app:layout_constraintStart_toStartOf="@id/text_pass"
        app:layout_constraintTop_toTopOf="@id/image_rub" />

    <TextView
        android:id="@+id/rub_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rub_buy"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_rub"
        app:layout_constraintStart_toStartOf="@id/text_buy"
        app:layout_constraintTop_toTopOf="@id/image_rub" />

</androidx.constraintlayout.widget.ConstraintLayout>